# curvature_estimation

./: MetricEstimation.qmd  README.md  SampleTrajectory.ipynb  environment.yml  football.jl  main.py  pyproject.toml  sample_size_experiment.py  whale_data_experiment.py
.devcontainer/: Dockerfile
data/: data_utils.py  toy_examples.py
models/: basic_model.py  hgsp_utils.py  hsgp.py  manifold.py  model.py  model_utils.py  neural.py  train.py  utils.py
visualization/: visualize.py
whale_data/: clean_data.csv  feature_data.csv
